--- a/ModifyXml/ModifyXml.csproj
+++ b/ModifyXml/ModifyXml.csproj
@@ -1,7 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0;net46</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <LangVersion>7.3</LangVersion>
+    <Version>1.0.0-beta1</Version>
+    <Authors>Microsoft</Authors>
+    <Description>Modifys a set of xml files and creates new xml files with the modification</Description>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <NoPackageAnalysis>true</NoPackageAnalysis>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Framework" Version="15.8.166" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.8.166" PrivateAssets="all" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="$(OutputPath)\net46\$(AssemblyName).dll" Pack="true" PackagePath="tools/net46" Visible="false" />
+    <None Include="$(OutputPath)\netstandard2.0\$(AssemblyName).dll" Pack="true" PackagePath="tools/netstandard2.0" Visible="false" />
+    <None Include="MSBuild.Roslyn.Tasks.targets" Pack="true" PackagePath="build" />
+  </ItemGroup>
+  
 </Project>
